# aero_bound_ventures

./: .gitignore
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  pyproject.toml
backend/crud/: users.py
backend/models/: users.py
backend/routers/: users.py
backend/schemas/: users.py
backend/tests/: test_users.py
backend/utils/: email.py
