[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
]
