[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "python-dotenv>=1.1.1",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "sqlmodel>=0.0.37",
]
